--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,11 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("luna.Luna")
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "luna"
     archiveClassifier = null
 }
 
